--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <title>My Custom Flashcards</title>
     <style>
         :root {
-            --primary: #4255ff;
-            --bg: #000000;
+            --primary: #000000;
+            --bg: #808080;
             --text: #303545;
             --danger: #ff4d4d;
         }
